# tutor-contrib-dbtest

./: .gitignore  pyproject.toml
tutor_contrib_dbtest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tutorcontrib/dbtest/: plugin.py
tutorcontrib/dbtest/djangoapps/dbui/: views.py
tutorcontrib/dbtest/djangoapps/dbui/templates/dbui/: users.html
