[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-contrib-dbtest"
version = "0.1.0"
description = "Tutor plugin with LMS UI"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
include-package-data = true
packages = { find = { include = ["tutorcontrib*"] } }

[tool.setuptools.package-data]
"tutorcontrib.dbtest" = ["templates/**/*"]
"tutorcontrib.dbtest.djangoapps.dbui" = ["templates/**/*"]

[project.entry-points."tutor.plugin.v1"]
dbtest = "tutorcontrib.dbtest.plugin"

[project.entry-points."lms.djangoapp"]
dbui = "tutorcontrib.dbtest.djangoapps.dbui.apps:DbuiConfig"

[project.entry-points."cms.djangoapp"]
dbui = "tutorcontrib.dbtest.djangoapps.dbui.apps:DbuiConfig"